Initialize Next.js 16 project with Tailwind v4 and theme system
- Add Next.js 16.0.10 with Turbopack and React 19.2.3
- Configure Tailwind CSS v4 with CSS-based theme
- Add shadcn/ui button component
- Implement light/dark/ocean theme system with next-themes
- Create basic landing page with theme toggle
- Add project dependencies (framer-motion, lucide-react, ai sdk)

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,20 @@
+# ===========================================
+# MCP Server API Keys
+# ===========================================
+
 # DigitalOcean API Token
-# Get from: DigitalOcean Control Panel > API > Tokens
+# Get from: https://cloud.digitalocean.com/account/api/tokens
 DO_API_TOKEN=your_digitalocean_api_token
 
-# DigitalOcean Region
+# Firecrawl API Key
+# Get from: https://firecrawl.dev
+FIRECRAWL_API_KEY=your_firecrawl_api_key
+
+# ===========================================
+# DigitalOcean Gradient AI Configuration
+# ===========================================
+
+# Region
 # Options: nyc3, sfo3, ams3, sgp1, lon1, fra1, tor1, blr1, syd1
 DO_REGION=nyc3
 
