Implement core API routes and frontend UI
API Routes:
- /api/create-agent: Create knowledge base and agent from URL
- /api/agent-status: Poll KB/agent status during indexing
- /api/chat: Stream chat completions from DO agent endpoint

Frontend Components:
- Landing page with URL input and progress indicator
- Chat page with streaming message display
- Sammy avatar with multiple variants
- Wave background animation
- Theme-aware UI components

Assets:
- Sammy the Shark images (normal, jetpack, balloon, front, profile)
- Original and transparent variants organized in folders

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.86",
     "@radix-ui/react-slot": "^1.1.1",
     "ai": "^4.1.0",
     "class-variance-authority": "^0.7.1",
