--- a/.env.example
+++ b/.env.example
@@ -19,8 +19,8 @@ FIRECRAWL_API_KEY=your_firecrawl_api_key
 DO_REGION=nyc3
 
 # Embedding Model for Knowledge Base
-# Options: text-embedding-3-small, text-embedding-3-large, Alibaba-NLP/gte-large-en-v1.5
-DO_EMBEDDING_MODEL=text-embedding-3-small
+# Options: Alibaba-NLP/gte-large-en-v1.5, sentence-transformers/all-MiniLM-L6-v2, sentence-transformers/multi-qa-mpnet-base-dot-v1
+DO_EMBEDDING_MODEL=Alibaba-NLP/gte-large-en-v1.5
 
 # LLM Model for Agent
 # Options: gpt-4o, gpt-4o-mini, llama3.3-70b-instruct, anthropic-claude-3.5-sonnet
