--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.86",
     "@radix-ui/react-slot": "^1.1.1",
+    "@vercel/analytics": "^1.6.1",
     "ai": "^4.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
