--- a/.env.example
+++ b/.env.example
@@ -14,14 +14,41 @@ FIRECRAWL_API_KEY=your_firecrawl_api_key
 # DigitalOcean Gradient AI Configuration
 # ===========================================
 
-# Region
-# Options: nyc3, sfo3, ams3, sgp1, lon1, fra1, tor1, blr1, syd1
-DO_REGION=nyc3
+# Region (tor1 is the only region supporting gen-ai agents)
+DO_REGION=tor1
 
-# Embedding Model for Knowledge Base
-# Options: Alibaba-NLP/gte-large-en-v1.5, sentence-transformers/all-MiniLM-L6-v2, sentence-transformers/multi-qa-mpnet-base-dot-v1
-DO_EMBEDDING_MODEL=Alibaba-NLP/gte-large-en-v1.5
+# DigitalOcean Project ID
+# Get from: DO Control Panel URL or API
+DO_PROJECT_ID=your_project_id
 
-# LLM Model for Agent
-# Options: gpt-4o, gpt-4o-mini, llama3.3-70b-instruct, anthropic-claude-3.5-sonnet
-DO_LLM_MODEL=gpt-4o
+# Embedding Model UUID for Knowledge Base
+# Options: 22653204-79ed-11ef-bf8f-4e013e2ddde4 (gte-large), 22652f75-79ed-11ef-bf8f-4e013e2ddde4 (mpnet), 22652c2a-79ed-11ef-bf8f-4e013e2ddde4 (minilm)
+DO_EMBEDDING_MODEL_UUID=22653204-79ed-11ef-bf8f-4e013e2ddde4
+
+# LLM Model UUID for Agent
+# gpt-4o: 9a364867-f300-11ef-bf8f-4e013e2ddde4
+# gpt-4o-mini: 9a3644c7-f300-11ef-bf8f-4e013e2ddde4
+# llama3.3-70b: d754f2d7-d1f0-11ef-bf8f-4e013e2ddde4
+DO_LLM_MODEL_UUID=9a364867-f300-11ef-bf8f-4e013e2ddde4
+
+# ===========================================
+# Legacy: Pre-created Agent (MVP Demo)
+# No longer used - agents are now created dynamically per domain
+# Kept for reference in case of rollback
+# ===========================================
+# DO_AGENT_UUID=your_agent_uuid
+# DO_AGENT_ENDPOINT=https://your-agent.agents.do-ai.run
+# DO_AGENT_ACCESS_KEY=your_agent_access_key
+
+# ===========================================
+# Shared Database (reuse for all KBs)
+# ===========================================
+DO_DATABASE_ID=your_database_id
+
+# ===========================================
+# Demo Chat Widget (SharkByte site)
+# Uses NEXT_PUBLIC_ prefix for client-side access
+# This powers the floating Sammy chat widget on the landing page
+# ===========================================
+NEXT_PUBLIC_DEMO_AGENT_ENDPOINT=https://your-demo-agent.agents.do-ai.run
+NEXT_PUBLIC_DEMO_AGENT_ACCESS_KEY=your_demo_access_key
