Add embeddable widget system, agent management, and demo agent features
Widget System:
- Add public/widget.js for embeddable chat widget injection
- Create embed/[agentId] page with isolated layout for iframe embedding
- Add embed-chat-widget component with full chat functionality
- Add API route for widget configuration and CORS support

Agent Management:
- Add agents/[agentId] pages for viewing and chatting with agents
- Create API routes for listing, getting, and updating agents
- Enhance agent-history component with improved UI
- Update DigitalOcean API client with expanded agent operations

Demo Agent:
- Add demo-agent API route for quick testing
- Create demo-agent library for streamlined demo creation

Knowledge Base:
- Add knowledge-bases API route for listing available KBs

Utility Scripts:
- Add cleanup-do.ts script for DigitalOcean resource cleanup
- Add create-first-agent.ts for initial agent provisioning
- Add update-agent.sh helper script

Component Improvements:
- Update chat-widget with enhanced styling and functionality
- Improve chat-message component rendering
- Update sammy-avatar with new variants
- Minor header and footer adjustments

Configuration:
- Add centralized config.ts for environment management
- Update types with new interfaces for agents and KBs
- Update dependencies in package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cleanup": "npx tsx scripts/cleanup-do.ts",
+    "create-agent": "npx tsx scripts/create-first-agent.ts"
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.86",
@@ -22,6 +24,8 @@
     "openai": "^4.77.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.6.0",
     "uuid": "^11.0.3"
   },
@@ -31,9 +35,11 @@
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "@types/uuid": "^10.0.0",
+    "dotenv": "^17.2.3",
     "eslint": "^9.17.0",
     "eslint-config-next": "16.0.10",
     "tailwindcss": "^4.1.18",
+    "tsx": "^4.21.0",
     "typescript": "^5.7.2"
   }
 }
