Update environment configuration, add license, and enhance README
- Modify .env.example to reflect new LLM model UUID for improved agent performance.
- Introduce LICENSE file detailing dual licensing options for commercial and non-commercial use.
- Enhance README with new screenshots, hackathon achievements, and updated project information.

--- a/.env.example
+++ b/.env.example
@@ -26,10 +26,10 @@ DO_PROJECT_ID=your_project_id
 DO_EMBEDDING_MODEL_UUID=22653204-79ed-11ef-bf8f-4e013e2ddde4
 
 # LLM Model UUID for Agent
-# gpt-4o: 9a364867-f300-11ef-bf8f-4e013e2ddde4
+# OpenAI GPT-oss-120b (recommended): 18bc9b8f-73c5-11f0-b074-4e013e2ddde4
 # gpt-4o-mini: 9a3644c7-f300-11ef-bf8f-4e013e2ddde4
 # llama3.3-70b: d754f2d7-d1f0-11ef-bf8f-4e013e2ddde4
-DO_LLM_MODEL_UUID=9a364867-f300-11ef-bf8f-4e013e2ddde4
+DO_LLM_MODEL_UUID=18bc9b8f-73c5-11f0-b074-4e013e2ddde4
 
 # ===========================================
 # Legacy: Pre-created Agent (MVP Demo)
