Fix agent deployment detection and prevent multiple API keys
## Agent Deployment Detection
- Add fallback pattern for endpoint detection (deployment.url || endpoint)
- Fixed 3 locations in agent-status that were using wrong variable
- Add checkAgentDeployment() that sets visibility to PUBLIC on first activation
- Move visibility setting from create-agent to agent-status polling
  (agent must be deployed before visibility can be set)
- Add debug logging for endpoint detection troubleshooting

## Multiple API Keys Prevention
- Add forceNewKey query param to agents/[agentId] route
- Only creates new key when explicitly requested with forceNewKey=true
- Dashboard and chat pages now cache accessKey in localStorage
- Check localStorage before creating new keys
- Remove POST calls that created new keys on every page load
- Fix incomplete StoredAgent objects when storing to localStorage

## UX Improvements
- Add 'deploying' status to AgentStatusResponse type
- Dashboard shows "Deploying..." button with spinner while agent deploys
- Chat page shows message when agent not ready, prevents sending
- Both pages poll status and reload agent when ready

## API Reliability
- Add fetchWithRetry() with exponential backoff for DO API calls
- Handles 429, 500, 502, 503, 504 status codes with retries
- Respects Retry-After header from rate-limited responses
- Different delays for creation (2s) vs polling (500ms) operations

## Configuration
- Add APP_DOMAIN environment variable for multi-environment support
- Demo agent config uses dynamic getters based on APP_DOMAIN
- Document APP_DOMAIN in .env.example

## Bug Fixes
- Fix stale closure issue with pollCount in homepage polling
- Add demo-page.html to .gitignore

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
 # ===========================================
+# App Domain Configuration
+# ===========================================
+# Set this to your deployment domain for testing on other domains
+# Defaults to sharkbyte-support.vercel.app (production)
+APP_DOMAIN=
+
+# ===========================================
 # MCP Server API Keys
 # ===========================================
 
