Add self-initializing deployment with auto-discovery
Enable easy deployment with just DO_API_TOKEN - all other resources
are auto-discovered or created.

## New Features

### Prebuild Initialization (scripts/init-deployment.ts)
- Runs during Vercel build phase
- Discovers/creates DigitalOcean project
- Creates demo agent for deployment domain
- Logs recommended env vars for faster subsequent builds
- Graceful failure (|| true) allows runtime fallback

### Runtime Config Fallback (/api/demo-config)
- New endpoint returns demo agent configuration
- Lazy initialization if env vars not set
- Enables demo widget to work without NEXT_PUBLIC_* vars

### Database Discovery (digitalocean.ts)
- getDatabaseId() discovers existing databases from KBs
- setCachedDatabaseId() caches for request lifecycle
- Eliminates need for DO_DATABASE_ID env var

### Domain Detection (demo-agent.ts)
- getDeploymentDomain() with fallback chain:
  APP_DOMAIN → VERCEL_PROJECT_PRODUCTION_URL → default
- ensureDemoAgent() accepts optional domain parameter
- Per-domain caching prevents duplicate creation

### Demo Widget Update (demo-chat-widget.tsx)
- Hybrid approach: env vars first, API fallback second
- Fetches from /api/demo-config if NEXT_PUBLIC_* not set
- Silent failure - widget just doesn't render if init fails

## Changes

- package.json: Added prebuild and init scripts
- .env.example: Updated docs - only DO_API_TOKEN required
- digitalocean.ts: Added database discovery functions
- demo-agent.ts: Added domain parameter and caching
- demo-chat-widget.tsx: Added /api/demo-config fallback

## Deployment

Deploy with just:
- DO_API_TOKEN (required)
- APP_DOMAIN (optional, auto-detected on Vercel)

First deployment creates all resources automatically.

--- a/.env.example
+++ b/.env.example
@@ -1,61 +1,73 @@
 # ===========================================
-# App Domain Configuration
+# SharkByte Support - Environment Variables
 # ===========================================
-# Set this to your deployment domain for testing on other domains
-# Defaults to sharkbyte-support.vercel.app (production)
+#
+# EASY DEPLOYMENT: Only DO_API_TOKEN is required!
+# All other variables are auto-discovered or created.
+#
+# The app will:
+# 1. Create a "SharkByte Support" project in DO if needed
+# 2. Provision a vector database automatically
+# 3. Create a demo agent for your deployment domain
+# 4. The demo widget works without NEXT_PUBLIC_* vars (runtime fallback)
+#
+# After first deployment, check the build logs for recommended
+# env vars to add for faster startup.
+#
+
+# ===========================================
+# REQUIRED - DigitalOcean API Token
+# ===========================================
+# Get from: https://cloud.digitalocean.com/account/api/tokens
+# Scopes needed: read, write
+DO_API_TOKEN=your_digitalocean_api_token
+
+# ===========================================
+# OPTIONAL - App Domain Configuration
+# ===========================================
+# Set this to your custom domain
+# Falls back to: VERCEL_PROJECT_PRODUCTION_URL → sharkbyte-support.vercel.app
 APP_DOMAIN=
 
 # ===========================================
-# MCP Server API Keys
+# OPTIONAL - Speed Optimizations
 # ===========================================
+# These are auto-discovered, but setting them skips API calls:
 
-# DigitalOcean API Token
-# Get from: https://cloud.digitalocean.com/account/api/tokens
-DO_API_TOKEN=your_digitalocean_api_token
+# DigitalOcean Project ID (auto-created if not set)
+# Get from build logs after first deployment
+DO_PROJECT_ID=
 
-# Firecrawl API Key
-# Get from: https://firecrawl.dev
-FIRECRAWL_API_KEY=your_firecrawl_api_key
+# Shared Database ID for Knowledge Bases (auto-provisioned if not set)
+# Get from build logs after first deployment
+DO_DATABASE_ID=
+
+# Demo widget config (uses runtime fallback if not set)
+# Get from build logs after first deployment
+NEXT_PUBLIC_DEMO_AGENT_ENDPOINT=
+NEXT_PUBLIC_DEMO_AGENT_ACCESS_KEY=
 
 # ===========================================
-# DigitalOcean Gradient AI Configuration
+# OPTIONAL - Model Configuration
 # ===========================================
+# Only change these if you want different models
 
 # Region (tor1 is the only region supporting gen-ai agents)
 DO_REGION=tor1
 
-# DigitalOcean Project ID
-# Get from: DO Control Panel URL or API
-DO_PROJECT_ID=your_project_id
+# Embedding Model UUID
+# Default: gte-large-en-v1.5 (22653204-79ed-11ef-bf8f-4e013e2ddde4)
+# Options: mpnet (22652f75...), minilm (22652c2a...)
+DO_EMBEDDING_MODEL_UUID=
 
-# Embedding Model UUID for Knowledge Base
-# Options: 22653204-79ed-11ef-bf8f-4e013e2ddde4 (gte-large), 22652f75-79ed-11ef-bf8f-4e013e2ddde4 (mpnet), 22652c2a-79ed-11ef-bf8f-4e013e2ddde4 (minilm)
-DO_EMBEDDING_MODEL_UUID=22653204-79ed-11ef-bf8f-4e013e2ddde4
-
-# LLM Model UUID for Agent
-# OpenAI GPT-oss-120b (recommended): 18bc9b8f-73c5-11f0-b074-4e013e2ddde4
-# gpt-4o-mini: 9a3644c7-f300-11ef-bf8f-4e013e2ddde4
-# llama3.3-70b: d754f2d7-d1f0-11ef-bf8f-4e013e2ddde4
-DO_LLM_MODEL_UUID=18bc9b8f-73c5-11f0-b074-4e013e2ddde4
+# LLM Model UUID
+# Default: GPT-oss-120b (18bc9b8f-73c5-11f0-b074-4e013e2ddde4)
+# Options: gpt-4o-mini (9a3644c7...), llama3.3-70b (d754f2d7...)
+DO_LLM_MODEL_UUID=
 
 # ===========================================
-# Legacy: Pre-created Agent (MVP Demo)
-# No longer used - agents are now created dynamically per domain
-# Kept for reference in case of rollback
+# OPTIONAL - Firecrawl Fallback
 # ===========================================
-# DO_AGENT_UUID=your_agent_uuid
-# DO_AGENT_ENDPOINT=https://your-agent.agents.do-ai.run
-# DO_AGENT_ACCESS_KEY=your_agent_access_key
-
-# ===========================================
-# Shared Database (reuse for all KBs)
-# ===========================================
-DO_DATABASE_ID=your_database_id
-
-# ===========================================
-# Demo Chat Widget (SharkByte site)
-# Uses NEXT_PUBLIC_ prefix for client-side access
-# This powers the floating Sammy chat widget on the landing page
-# ===========================================
-NEXT_PUBLIC_DEMO_AGENT_ENDPOINT=https://your-demo-agent.agents.do-ai.run
-NEXT_PUBLIC_DEMO_AGENT_ACCESS_KEY=your_demo_access_key
+# For sites with JavaScript rendering issues
+# Get from: https://firecrawl.dev
+FIRECRAWL_API_KEY=
