Fix model access key list API and simplify deduplication
- Fix listModelAccessKeys() to parse 'api_key_infos' field (was incorrectly
  using 'model_access_keys' causing 0 keys found)
- Remove token regeneration logic - users should set DO_MODEL_ACCESS_KEY_ID
  or use DigitalOcean dashboard to regenerate keys manually
- Add DO_MODEL_ACCESS_KEY_ID to .env.example and README documentation

--- a/.env.example
+++ b/.env.example
@@ -42,6 +42,11 @@ DO_PROJECT_ID=
 # Get from build logs after first deployment
 DO_DATABASE_ID=
 
+# Model Access Key ID (prevents duplicate key creation)
+# Get from build logs after first deployment, or from:
+# https://cloud.digitalocean.com/gen-ai/model-api-keys
+DO_MODEL_ACCESS_KEY_ID=
+
 # Demo widget config (uses runtime fallback if not set)
 # Get from build logs after first deployment
 NEXT_PUBLIC_DEMO_AGENT_ENDPOINT=
