Update deployment documentation and .env.example for clarity
- Added detailed deployment guide in DEPLOYMENT.md, covering setup steps, estimated costs, and troubleshooting.
- Updated .env.example to include important notes on environment variables and costs associated with the vector database.
- Enhanced README.md with cost notice and first-time setup instructions, linking to the new DEPLOYMENT.md for comprehensive guidance.

--- a/.env.example
+++ b/.env.example
@@ -5,14 +5,20 @@
 # EASY DEPLOYMENT: Only DO_API_TOKEN is required!
 # All other variables are auto-discovered or created.
 #
+# IMPORTANT: See DEPLOYMENT.md for the complete setup guide, including:
+# - Prerequisites (one-time manual agent creation required)
+# - Estimated costs (~$20/month for database + AI usage)
+# - Post-deployment optimization
+# - Troubleshooting common issues
+#
 # The app will:
 # 1. Create a "SharkByte Support" project in DO if needed
-# 2. Provision a vector database automatically
+# 2. Provision a vector database automatically (~$19.60/month)
 # 3. Create a demo agent for your deployment domain
 # 4. The demo widget works without NEXT_PUBLIC_* vars (runtime fallback)
 #
 # After first deployment, check the build logs for recommended
-# env vars to add for faster startup.
+# env vars to add (especially DO_DATABASE_ID to prevent duplicate DBs!).
 #
 
 # ===========================================
