Update documentation and configuration for workspace handling in DigitalOcean API
- Clarified that `DO_WORKSPACE_ID` is not supported by the DigitalOcean API, and agents will always be created in the default workspace.
- Added notes in `.env.example` and `DEPLOYMENT.md` regarding workspace limitations and manual movement of agents.
- Updated comments in `digitalocean.ts` and `config.ts` to reflect workspace assignment restrictions and organization practices.

--- a/.env.example
+++ b/.env.example
@@ -50,8 +50,13 @@ DO_DATABASE_ID=
 
 # Model Access Key ID (prevents duplicate key creation)
 # Get from build logs after first deployment, or from:
-# https://cloud.digitalocean.com/gen-ai/model-api-keys
+# https://cloud.digitalocean.com/gen-ai/model-access-keys
 DO_MODEL_ACCESS_KEY_ID=
+
+# NOTE: DO_WORKSPACE_ID is NOT supported - the DO API does not allow
+# workspace assignment during agent creation. Agents are created in the
+# default workspace and must be moved manually via Control Panel.
+# See DEPLOYMENT.md troubleshooting section for details.
 
 # Demo widget config (uses runtime fallback if not set)
 # Get from build logs after first deployment
