Fix chat streaming, crawl costs, embedding model, and scroll bug
Changes:
- Embedding model: Switch to Qwen3 ($0.04/1M vs $0.09/1M = 56% savings)
- Crawl limits: Add max_pages by site size (mega:50, large:100, medium:200, small:500)
- Chat streaming: RAF batching reduces renders from 200+ to ~20-30 per response
- Scroll bug: Fix page jumping to top when streaming ends (use 'auto' not 'smooth')
- Race condition: In-memory lock prevents duplicate agent creation on double-click
- SCOPED crawl: Always use PATH mode (SCOPED only indexed sitemap.xml itself)

Files:
- src/lib/config.ts: Qwen3 UUID, MAX_PAGES_BY_SIZE config
- src/lib/digitalocean.ts: max_pages in crawler, PATH mode
- src/app/api/create-agent/route.ts: Domain lock, maxPages based on site size
- src/components/chat/chat-core.tsx: RAF batching, instant scroll
- src/app/page.tsx: isSubmitting state for double-submit prevention
- .env.example, .claude/CLAUDE.md: Updated embedding model docs

--- a/.env.example
+++ b/.env.example
@@ -72,8 +72,11 @@ NEXT_PUBLIC_DEMO_AGENT_ACCESS_KEY=
 DO_REGION=tor1
 
 # Embedding Model UUID
-# Default: gte-large-en-v1.5 (22653204-79ed-11ef-bf8f-4e013e2ddde4)
-# Options: mpnet (22652f75...), minilm (22652c2a...)
+# Default: Qwen3 Embedding 0.6B (bb3ab4ee-d9b5-11f0-b074-4e013e2ddde4) - $0.04/1M tokens
+# Options:
+#   - All MiniLM L6 v2 (22652c2a-79ed-11ef-bf8f-4e013e2ddde4) - $0.01/1M tokens (cheapest)
+#   - GTE Large EN v1.5 (22653204-79ed-11ef-bf8f-4e013e2ddde4) - $0.09/1M tokens (highest quality)
+#   - Multi QA MPNet Base Dot v1 (22652f75-79ed-11ef-bf8f-4e013e2ddde4) - $0.01/1M tokens
 DO_EMBEDDING_MODEL_UUID=
 
 # LLM Model UUID
